--- a/AdminLTE/Views/ManageUser/Create.cshtml
+++ b/AdminLTE/Views/ManageUser/Create.cshtml
@@ -21,9 +21,6 @@
         <div class="row">
             <div class="col-12">
                 <div class="card shadow border border-primary">
-                    @* <div class="card-header bg-primary text-white text-center">
-                        <h4 class="mb-0">Create New User</h4>
-                    </div> *@
                     <div class="card-body">
                         @if (ViewBag.RequiredError != null)
                         {
@@ -32,9 +29,7 @@
                             </div>
                         }   
                         <form asp-action="Create" method="post" novalidate enctype="multipart/form-data">
-                            <!-- Show all validation messages at top -->
-                            @* <div asp-validation-summary="All" class="text-danger mb-3"></div> *@
-
+                           
                             <div class="text-center mb-4">
                                 <img src="~/uploads/default.png"
                                      class="rounded-circle shadow"
@@ -73,11 +68,19 @@
                                 </div>
                             </div>
                             <div class="form-row">
-                                <div class="form-group col-md-6">
+                                <div class="form-group col-md-6 position-relative">
                                     <label>Password <span class="text-danger">*</span></label>
-                                    <input type="password" name="Password" class="form-control" required />
+                                    <div class="input-group">
+                                        <input type="password" name="Password" class="form-control" id="passwordInput" required />
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                                <i class="fas fa-eye" id="toggleIcon"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                     <span class="text-danger">@ViewData["PasswordError"]</span>
                                 </div>
+
                                 <div class="form-group col-md-6">
                                     <label asp-for="RoleId" class="font-weight-bold">Select Role <span class="text-danger">*</span></label>
                                     <div class="input-group">
